force-app/main/default/objects/Contact/fields/APSCHE__c.field-meta.xml
<CustomField>
    <fullName>APSCHE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APSCHE</label>
    <type>Checkbox</type>
</CustomField>