force-app/main/default/objects/Contact/fields/APSCHE_Name__c.field-meta.xml
<CustomField>
    <fullName>APSCHE_Name__c</fullName>
    <label>APSCHE Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APSCHE 1</fullName>
            </value>
            <value>
                <fullName>APSCHE 2</fullName>
            </value>
            <value>
                <fullName>APSCHE 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>