force-app/main/default/objects/Contact/fields/CRT__c.field-meta.xml
<CustomField>
    <fullName>CRT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRT</label>
    <type>Checkbox</type>
</CustomField>