force-app/main/default/objects/Contact/fields/Currently_in_Year__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_Year__c</fullName>
    <label>Currently in Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>