force-app/main/default/objects/Contact/fields/etutorresetpasswordurl__c.field-meta.xml
<CustomField>
    <fullName>etutorresetpasswordurl__c</fullName>
    <label>etutorresetpasswordurl</label>
    <type>Url</type>
</CustomField>