force-app/main/default/objects/Contact/fields/etutortempuserpassword__c.field-meta.xml
<CustomField>
    <fullName>etutortempuserpassword__c</fullName>
    <label>etutortempuserpassword</label>
    <length>200</length>
    <type>Text</type>
</CustomField>