force-app/main/default/objects/Contact/fields/eTutorUserID__c.field-meta.xml
<CustomField>
    <fullName>eTutorUserID__c</fullName>
    <externalId>true</externalId>
    <label>eTutor User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>