force-app/main/default/objects/Contact/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mentor</label>
    <type>Checkbox</type>
</CustomField>