force-app/main/default/objects/Contact/fields/ReferredBy__c.field-meta.xml
<CustomField>
    <fullName>ReferredBy__c</fullName>
    <label>Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>