force-app/main/default/objects/Contact/fields/ReferredStudent__c.field-meta.xml
<CustomField>
    <fullName>ReferredStudent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred Student</label>
    <type>Checkbox</type>
</CustomField>