force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Handler</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>