force-app/main/default/objects/Contact/fields/SKTaxationConsentFormURL__c.field-meta.xml
<CustomField>
    <fullName>SKTaxationConsentFormURL__c</fullName>
    <formula>HYPERLINK(&quot;https://dev-cherishtechnologies.cs96.force.com/StudentAcceptanceForm?studentID=&quot;&amp;Id , &quot;Taxation Consent Form&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxation Consent Form URL</label>
    <type>Text</type>
</CustomField>