force-app/main/default/objects/Contact/fields/TaxationJourneyStatus__c.field-meta.xml
<CustomField>
    <fullName>TaxationJourneyStatus__c</fullName>
    <label>Taxation Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consent Form Shared</fullName>
            </value>
            <value>
                <fullName>Student Consent Acceptance</fullName>
            </value>
            <value>
                <fullName>Student Consent Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>