force-app/main/default/objects/Contact/fields/TPO__c.field-meta.xml
<CustomField>
    <fullName>TPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPO</label>
    <type>Checkbox</type>
</CustomField>