force-app/main/default/objects/Contact/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tutor</label>
    <type>Checkbox</type>
</CustomField>