force-app/main/default/objects/Contact/fields/Tx_VisaStatus__c.field-meta.xml
<CustomField>
    <fullName>Tx_VisaStatus__c</fullName>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>H1B</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>