force-app/main/default/objects/Contact/recordTypes/College_University.recordType-meta.xml
<RecordType>
    <fullName>College_University</fullName>
    <active>true</active>
    <label>College/University</label>
</RecordType>