force-app/main/default/objects/Contact/recordTypes/Edubot.recordType-meta.xml
<RecordType>
    <fullName>Edubot</fullName>
    <active>true</active>
    <label>Edubot</label>
</RecordType>