force-app/main/default/objects/Contact/recordTypes/eTutor.recordType-meta.xml
<RecordType>
    <fullName>eTutor</fullName>
    <active>true</active>
    <label>eTutor</label>
</RecordType>